# ImageDistributor

./: .gitignore  Image distributor.py  pyproject.toml  run.py
app/api/: __init__.py  __thread.py  cache.py  container.py  utils.py
app/api/cache/: cache.py
app/ui/: __init__.py  app.py  info_tooltip.py  menu.py
app/ui/main/bottom/: button.py  frame.py
app/ui/main/top/: display.py  frame.py  listbox.py  watchdog.py
app/ui/main/top/zoom/: lens.py  modes.py  settings.py  slider.py  utils.py  zoom.py
app/ui/submenu/: base_window.py  logger.py
app/ui/submenu/copy_manager/: cache_loader.py  canvas.py  copy_manager.py  frame.py
app/ui/submenu/logger/: logger.py
apps/: logger.py
apps/copy_manager/: archive.py  auxiliary.py  cache_filler.py  copymanager.py  copymanager_widget.py  progress_bar.py
apps/lens_settings/: lens_submenu.py  slider.py
tests/: conftest.py
tests/test_functional/: test_api.py
widgets/: basewidget.py  filelist.py  menu.py  move_button.py  pause.py
widgets/canvas/: basecanvas.py  customcanvas.py  zoomer.py
widgets/canvas/lens/: distancemodes.py  lens.py
workstuff/: basethread.py  globals.py  watcher.py
