[tool.poetry]
name = "Image Distributor"
version = "0.1.0"
description = ""
authors = ["Baranov_DR <mrramzes37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
Send2Trash = "^1.8.2"
watchdog = "^3.0.0"
customtkinter = "^5.2.0"
imagehash = "^4.3.1"
numba = "^0.58.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
